--- a/Javascript-learning/TypeScript/TypeScript.doc.md/6.Generics.TypeScript.doc.md
+++ b/Javascript-learning/TypeScript/TypeScript.doc.md/6.Generics.TypeScript.doc.md
@@ -4,13 +4,21 @@
 
 A major part of software engineering is building components that not only have well-defined and consistent APIs, but are also reusable. Components that are capable of working on the data of today as well as the data of tomorrow will give you the most flexible capabilities for building up large software systems.
 
+软件工程的宗旨除了构建定义良好且一致的 API, 还需要让代码可重用. 如果一个组件既能够满足当前的使用场景, 也能够满足未来的使用情况, 那么它就为你构建一个大型软件系统提供了足够的灵活性.
+
 In languages like C# and Java, one of the main tools in the toolbox for creating reusable components is generics, that is, being able to create a component that can work over a variety of types rather than a single one. This allows users to consume these components and use their own types.
+
+像在 C# 或者 Java 中, 工具箱中用于构建可重用组件的一个主要工具就是泛型, 也就是说, 用它能够创建出的组件能够良好的运行在各种类型的数据上, 而不是只能适用于一种. 这使得用户可以用它们自己定义的类型来使用这些组件.
 
 ## Hello World of Generics
 
-To start off, let’s do the “hello world” of generics: the identity function. The identity function is a function that will return back whatever is passed in. You can think of this in a similar way to the echo command.
+To start off, let’s do the “hello world” of generics: the identity function. The identity function is a function that will return back whatever is passed in. You can think of this in a similar way to the `echo` command.
+
+我们使用 `identity` 方法来开始第一行泛型代码. `identity` 方法直接将传入的参数返回. 你可以把它当做是 `echo` 命令.
 
 Without generics, we would either have to give the identity function a specific type:
+
+如果没有泛型, 我们必须给 `identity` 函数指定一个类型:
 
 ```ts
 function identity(arg: number): number {
@@ -20,6 +28,8 @@ function identity(arg: number): number {
 
 Or, we could describe the identity function using the `any` type:
 
+或者为 `identity` 函数指定 `any` 类型:
+
 ```ts
 function identity(arg: any): any {
     return arg;
@@ -28,10 +38,290 @@ function identity(arg: any): any {
 
 While using `any` is certainly generic in that it will cause the function to accept any and all types for the type of `arg`, we actually are losing the information about what that type was when the function returns. If we passed in a number, the only information we have is that any type could be returned.
 
+尽管使用 `any` 会让函数接受任何类型的参数, 但是当函数返回的时候却得不到明确的类型信息. 如果我们传入 number 类型, 我们也只能知道返回值可能是任意类型 (因为 `any` 类型并不能指定某个特定的类型, 返回 `any` 类型可以是 `number`, `string` 等, 但是泛型可以指定传入的类型作为返回的类型).
+
 Instead, we need a way of capturing the type of the argument in such a way that we can also use it to denote what is being returned. Here, we will use a type variable, a special kind of variable that works on types rather than values.
+
+因此, 在这种情况中我们需要一种能够捕获参数类型的方式来指定返回的类型. 这里, 我们使用类型变量, 一种可以用于所有的类型而非具体值的一种特殊变量.
 
 ```ts
 function identity<T>(arg: T): T {
     return arg;
 }
+```
+
+We’ve now added a type variable `T` to the identity function. This `T` allows us to capture the type the user provides (e.g. `number`), so that we can use that information later. Here, we use `T` again as the return type. On inspection, we can now see the same type is used for the argument and the return type. This allows us to traffic that type information in one side of the function and out the other.
+
+现在我们给 identity 函数添加类型变量 `T`. 它允许我们捕获用户提供的类型(如 `number`), 因此我们在后面可以使用这个类型. 这里, 我们又使用 `T` 作为返回类型. 现在我们的参数和返回值都是同一个类型了. 这使得我们可以从函数的输入到输出都能跟踪类型信息.
+
+We say that this version of the `identity` function is generic, as it works over a range of types. Unlike using `any`, it’s also just as precise (ie, it doesn’t lose any information) as the first `identity` function that used numbers for the argument and return type.
+
+我们就说这个版本的 `identity` 方法就是泛型, 因为它能够适用于多种类型. 不像 `any` 那样, 现在这个函数也可以像第一个 `identity` 函数那样精确的指定 number  作为参数和返回值类型.
+
+Once we’ve written the generic identity function, we can call it in one of two ways. The first way is to pass all of the arguments, including the type argument, to the function:
+
+写完泛型函数 `identity` 之后, 我们可以使用两种方式来调用它. 第一种就是给函数传入所有的参数, 包括参数类型:
+
+```ts
+let output = identity<string>("myString");  // type of output will be 'string'
+```
+
+Here we explicitly set `T` to be `string` as one of the arguments to the function call, denoted using the `<>` around the arguments rather than `()`.
+
+这里在调用函数的时候我们将 `T` 显式指定为 `string`, 注意是使用 `<>` 包裹参数而不是 `()`.
+
+The second way is also perhaps the most common. Here we use type argument inference – that is, we want the compiler to set the value of `T` for us automatically based on the type of the argument we pass in:
+
+第二种方式可能更常用. 使用类型推断 - 也就是说, 我们希望编译器根据我们传入的参数类型自动为我们设置 `T` 的类型.
+
+```ts
+let output = identity("myString");  // type of output will be 'string'
+```
+
+Notice that we didn’t have to explicitly pass the type in the angle brackets (`<>`); the compiler just looked at the value "`myString`", and set `T` to its type. While type argument inference can be a helpful tool to keep code shorter and more readable, you may need to explicitly pass in the type arguments as we did in the previous example when the compiler fails to infer the type, as may happen in more complex examples.
+
+注意, 我们没有显式使用 (`<>`) 来指定类型; 编译器会检查 "`myString`" 值的类型, 然后将 `T` 设置为它的类型. 尽管参数类型推断对简化代码和增强代码可读性很有帮助, 但是当在一些更复杂的例子中, 编译器不能推断参数类型的时候还是需要像前面的例子那样显式的指定出参数的类型.
+
+## 使用泛型的类型变量
+
+When you begin to use generics, you’ll notice that when you create generic functions like `identity`, the compiler will enforce that you use any generically typed parameters in the body of the function correctly. That is, that you actually treat these parameters as if they could be any and all types.
+
+当你开始使用泛型后, 你将会注意到当你创建一个像 `identity` 这样的泛型函数时, 编译器会在函数体中强制你使用任何常规类型. 也就是说, 你需要把这些参数当做它们可能是任意类型.
+
+Let’s take our `identity` function from earlier:
+
+从之前的 `identity` 开始:
+
+```ts
+function identity<T>(arg: T): T {
+    return arg;
+}
+```
+
+What if we want to also log the length of the argument `arg` to the console with each call? We might be tempted to write this:
+
+如果我们希望打印参数 `arg` 的长度, 我们可能这么写:
+
+```ts
+function loggingIdentity<T>(arg: T): T {
+    console.log(arg.length);  // Error: T doesn't have .length
+    return arg;
+}
+```
+
+When we do, the compiler will give us an error that we’re using the `.length` member of `arg`, but nowhere have we said that `arg` has this member. Remember, we said earlier that these type variables stand in for any and all types, so someone using this function could have passed in a `number` instead, which does not have a `.length` member.
+
+但很不幸的是, 当我们这么写时, 编译器会报错, 因为在我们使用 `arg` 的 `.length` 成员时, 并没有任何地方可以表明 `arg` 是有 `.length` 成员的. 记住, 我们先前说的类型变量代表所有的类型, 因此某个人在使用这个函数的时候可能传入的是 `number` 类型, 它就没有 `.length` 成员.
+
+Let’s say that we’ve actually intended this function to work on arrays of `T` rather than `T` directly. Since we’re working with arrays, the `.length` member should be available. We can describe this just like we would create arrays of other types:
+
+假设我们实际上希望这个函数能够直接处理 `T` 的数组而不是 `T`. 因为我们希望使用数组, 因此就有可以使用 `.length` 成员. 我们可以像描述其他类型的数组一样描述这个数组:
+
+```ts
+function loggingIdentity<T>(arg: T[]): T[] {
+    console.log(arg.length);  // Array has a .length, so no more error
+    return arg;
+}
+```
+
+You can read the type of `loggingIdentity` as “the generic function `loggingIdentity` takes a type parameter `T`, and an argument `arg` which is an array of `T`s, and returns an array of `T`s.” If we passed in an array of numbers, we’d get an array of numbers back out, as `T` would bind to `number`. This allows us to use our generic type variable `T` as part of the types we’re working with, rather than the whole type, giving us greater flexibility.
+
+We can alternatively write the sample example this way:
+
+```ts
+function loggingIdentity<T>(arg: Array<T>): Array<T> {
+    console.log(arg.length);  // Array has a .length, so no more error
+    return arg;
+}
+```
+
+You may already be familiar with this style of type from other languages. In the next section, we’ll cover how you can create your own generic types like `Array<T>`.
+
+## Generic Types
+
+In previous sections, we created generic identity functions that worked over a range of types. In this section, we’ll explore the type of the functions themselves and how to create generic interfaces.
+
+The type of generic functions is just like those of non-generic functions, with the type parameters listed first, similarly to function declarations:
+
+```ts
+function identity<T>(arg: T): T {
+    return arg;
+}
+
+let myIdentity: <T>(arg: T) => T = identity;
+```
+
+We could also have used a different name for the generic type parameter in the type, so long as the number of type variables and how the type variables are used line up.
+
+```ts
+function identity<T>(arg: T): T {
+    return arg;
+}
+
+let myIdentity: <U>(arg: U) => U = identity;
+```
+
+We can also write the generic type as a call signature of an object literal type:
+
+```ts
+function identity<T>(arg: T): T {
+    return arg;
+}
+
+let myIdentity: {<T>(arg: T): T} = identity;
+```
+
+Which leads us to writing our first generic interface. Let’s take the object literal from the previous example and move it to an interface:
+
+```ts
+interface GenericIdentityFn {
+    <T>(arg: T): T;
+}
+
+function identity<T>(arg: T): T {
+    return arg;
+}
+
+let myIdentity: GenericIdentityFn = identity;
+```
+
+In a similar example, we may want to move the generic parameter to be a parameter of the whole interface. This lets us see what type(s) we’re generic over (e.g. `Dictionary<string>`rather than just `Dictionary`). This makes the type parameter visible to all the other members of the interface.
+
+```ts
+interface GenericIdentityFn<T> {
+    (arg: T): T;
+}
+
+function identity<T>(arg: T): T {
+    return arg;
+}
+
+let myIdentity: GenericIdentityFn<number> = identity;
+```
+
+Notice that our example has changed to be something slightly different. Instead of describing a generic function, we now have a non-generic function signature that is a part of a generic type. When we use `GenericIdentityFn`, we now will also need to specify the corresponding type argument (here: `number`), effectively locking in what the underlying call signature will use. Understanding when to put the type parameter directly on the call signature and when to put it on the interface itself will be helpful in describing what aspects of a type are generic.
+
+In addition to generic interfaces, we can also create generic classes. Note that it is not possible to create generic enums and namespaces.
+
+## Generic Classes
+
+A generic class has a similar shape to a generic interface. Generic classes have a generic type parameter list in angle brackets (`<>`) following the name of the class.
+
+```ts
+class GenericNumber<T> {
+    zeroValue: T;
+    add: (x: T, y: T) => T;
+}
+
+let myGenericNumber = new GenericNumber<number>();
+myGenericNumber.zeroValue = 0;
+myGenericNumber.add = function(x, y) { return x + y; };
+```
+
+This is a pretty literal use of the `GenericNumber` class, but you may have noticed that nothing is restricting it to only use the `number` type. We could have instead used `string` or even more complex objects.
+
+```ts
+let stringNumeric = new GenericNumber<string>();
+stringNumeric.zeroValue = "";
+stringNumeric.add = function(x, y) { return x + y; };
+
+alert(stringNumeric.add(stringNumeric.zeroValue, "test"));
+```
+
+Just as with interface, putting the type parameter on the class itself lets us make sure all of the properties of the class are working with the same type.
+
+As we covered in our section on classes, a class has two sides to its type: the static side and the instance side. Generic classes are only generic over their instance side rather than their static side, so when working with classes, static members can not use the class’s type parameter.
+
+## Generic Constraints
+
+If you remember from an earlier example, you may sometimes want to write a generic function that works on a set of types where you have some knowledge about what capabilities that set of types will have. In our `loggingIdentity` example, we wanted to be able to access the `.length` property of `arg`, but the compiler could not prove that every type had a `.length` property, so it warns us that we can’t make this assumption.
+
+```ts
+function loggingIdentity<T>(arg: T): T {
+    console.log(arg.length);  // Error: T doesn't have .length
+    return arg;
+}
+```
+
+Instead of working with any and all types, we’d like to constrain this function to work with any and all types that also have the `.length` property. As long as the type has this member, we’ll allow it, but it’s required to have at least this member. To do so, we must list our requirement as a constraint on what T can be.
+
+To do so, we’ll create an interface that describes our constraint. Here, we’ll create an interface that has a single `.length` property and then we’ll use this interface and the `extends` keyword to denote our constraint:
+
+```ts
+interface Lengthwise {
+    length: number;
+}
+
+function loggingIdentity<T extends Lengthwise>(arg: T): T {
+    console.log(arg.length);  // Now we know it has a .length property, so no more error
+    return arg;
+}
+```
+
+Because the generic function is now constrained, it will no longer work over any and all types:
+
+```ts
+loggingIdentity(3);  // Error, number doesn't have a .length property
+```
+
+Instead, we need to pass in values whose type has all the required properties:
+
+```ts
+loggingIdentity({length: 10, value: 3});
+```
+
+### Using Type Parameters in Generic Constraints
+
+You can declare a type parameter that is constrained by another type parameter. For example, here we’d like to get a property from an object given its name. We’d like to ensure that we’re not accidentally grabbing a property that does not exist on the `obj`, so we’ll place a constraint between the two types:
+
+```ts
+function getProperty<T, K extends keyof T>(obj: T, key: K) {
+    return obj[key];
+}
+
+let x = { a: 1, b: 2, c: 3, d: 4 };
+
+getProperty(x, "a"); // okay
+getProperty(x, "m"); // error: Argument of type 'm' isn't assignable to 'a' | 'b' | 'c' | 'd'.
+```
+
+### Using Class Types in Generics
+
+When creating factories in TypeScript using generics, it is necessary to refer to class types by their constructor functions. For example,
+
+```ts
+function create<T>(c: {new(): T; }): T {
+    return new c();
+}
+```
+
+A more advanced example uses the prototype property to infer and constrain relationships between the constructor function and the instance side of class types.
+
+```ts
+class BeeKeeper {
+    hasMask: boolean;
+}
+
+class ZooKeeper {
+    nametag: string;
+}
+
+class Animal {
+    numLegs: number;
+}
+
+class Bee extends Animal {
+    keeper: BeeKeeper;
+}
+
+class Lion extends Animal {
+    keeper: ZooKeeper;
+}
+
+function createInstance<A extends Animal>(c: new () => A): A {
+    return new c();
+}
+
+createInstance(Lion).keeper.nametag;  // typechecks!
+createInstance(Bee).keeper.hasMask;   // typechecks!
 ```
